# detexify-hs-backend

./: .gitignore  README.md  detexify-hs-backend.cabal
src/: Webserver.hs
