name:                detexify-hs-backend
version:             0.1.0.0
author:              Daniel Kirsch
maintainer:          danishkirel@gmail.com
build-type:          Simple
cabal-version:       1.24

extra-source-files:  README.md

executable detexify-hs-backend
  hs-source-dirs:      src
  main-is:             Webserver.hs
  default-language:    Haskell2010

  other-modules:
    Classifier
    DTW
    JSON.Results
    JSON.Strokes
    Sim
    StrokeSample
    Strokes

  build-depends:
    base >= 4.9 && < 5,
    containers >= 0.5,
    array >= 0.5,
    scotty >= 0.11 && < 0.13,
    mtl >= 2.2,
    stm >= 2.4.3,
    http-types >= 0.9.1 && < 0.13,
    aeson >= 0.11 && < 2.0,
    bytestring >= 0.10,
    transformers >= 0.4,
    deepseq >= 1.4,
    blaze-builder >= 0.4,
    wai >= 3.2,
    warp >= 3.2 && < 3.4,
    wai-extra >= 3.0,
    text >= 1.2
